[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level/Level.gd" type="Script" id=2]
[ext_resource path="res://Obstacle/Obstacle.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sprites/background-day.png" type="Texture" id=4]
[ext_resource path="res://Level/Ground.tscn" type="PackedScene" id=5]

[node name="Level" type="Node"]
script = ExtResource( 2 )
obstacle_scene = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 107, 245 )
z_index = 1

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SpawnDelayTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )

[node name="Ground" parent="." instance=ExtResource( 5 )]
position = Vector2( 168, 456 )
z_index = 2

[node name="Ground2" parent="." instance=ExtResource( 5 )]
position = Vector2( 504, 456 )

[node name="Ground3" parent="." instance=ExtResource( 5 )]
position = Vector2( 840, 456 )

[connection signal="game_over" from="Player" to="." method="game_over"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="SpawnDelayTimer" to="." method="_on_SpawnDelayTimer_timeout"]
